using ReactiveUI;

namespace VkClientAvalonia.GUI.App.ViewModels {
    public class ViewModelBase : ReactiveObject {
    }
}